@@ -1,3 +1,8 @@
+2006-09-28  Chong Yidong  <cyd@stupidchicken.com>
+
+	* mail/smtpmail.el (smtpmail-try-auth-methods): Do not break long
+	lines in base64-encoded authentication response.
+
 2006-09-26  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
 
 	* progmode/ebnf2ps.el: Doc fix. Implement arrow spacing and scaling.
